# Diary

./: Conf elettronica dei primi 18 elementi.docx
DiaryGUI/: ActivityDetails.cpp  ActivityDetails.h  AddActivity.cpp  AddActivity.h  AddActivityList.cpp  AddActivityList.h  AddPerson.cpp  AddPerson.h  AddSubActivity.cpp  AddSubActivity.h  DiaryGUI.mk  DiaryGUI.project  DiaryGUI.txt  DiaryHome.cpp  DiaryHome.h  MainFrame.cpp  MainFrame.h  NewBoard.cpp  NewBoard.h  main.cpp  wxcrafter.cpp  wxcrafter.h  wxcrafter.wxcp
Progetto C++/: Activity.cpp  Activity.hpp  ActivityDetailsFrame.cpp  ActivityDetailsFrame.h  ActivityList.cpp  ActivityList.hpp  AddActivityFrame.cpp  AddActivityFrame.h  AddActivityListFrame.cpp  AddActivityListFrame.h  AddPersonFrame.cpp  AddPersonFrame.h  AddSubActivity.cpp  AddSubActivityFrame.h  Administrator.cpp  Administrator.hpp  Board.cpp  Board.hpp  Date.cpp  Date.hpp  DiaryGUI.mk  DiaryGUI.project  DiaryGUI.txt  DiaryHomeFrame.cpp  DiaryHomeFrame.h  DropTargetListCtrl.cpp  DropTargetListCtrl.h  MainFrame.cpp  MainFrame.h  NewBoardFrame.cpp  NewBoardFrame.h  SubActivity.cpp  SubActivity.hpp  SubActivityList.cpp  SubActivityList.hpp  main.cpp  wxcrafter.cpp  wxcrafter.h  wxcrafter.wxcp  wxcrafter_bitmaps.cpp
Progetto iniziale/: Activity.cpp  Activity.hpp  ActivityList.cpp  ActivityList.hpp  Administrator.cpp  Administrator.hpp  Board.cpp  Board.hpp  CMakeLists.txt  Date.hpp  DateException.cpp  DateException.hpp  SubActivity.hpp  SubActivityList.cpp  SubActivityList.hpp  main.cpp
src/: Activity.cpp  Activity.hpp  ActivityList.cpp  ActivityList.hpp  (+8 more)
(+2 files in other folders)
